--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = er2parquet
-description = Add a short description here!
+description = Generates parquet files from the JSON-file you can download from the Norwegian Business Register.
 author = Steinar Skagemo
 author_email = sskagemo@gmail.com
 license = MIT
@@ -15,8 +15,8 @@ long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/sskagemo/er2parquet
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+    Documentation = https://github.com/sskagemo/er2parquet
+    Source = https://github.com/sskagemo/er2parquet
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -49,6 +49,8 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    pandas>=2.0.3,<3.0.0
+    fastparquet>=2023.7.0,<2024.0.0
 
 
 [options.packages.find]
